Replace placeholder footer, connect fontawesome kit and fix horizontal scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #F9FAFC;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 .brand {
@@ -160,8 +161,32 @@ body {
     color: rgb(222, 146, 168);
 }
 
-/* ----Post Form---- */
+/* ----Footer----- */
 
-#post-form {
-    color: red;
+.footer {
+    text-align: center;
 }
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background: orange;
+}
+
+#footer-details {
+    color: orange;
+  }
